--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,38 +1,47 @@
 .navbar {
   display: flex;
   align-items: center;
-  flex-direction: row;
+  justify-content: center;
   margin-top: 3em;
 }
 
 .navbar-menu {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  list-style: none;
+  justify-content: center;
   align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  margin-right: auto;
+  margin-left: 3em;
 }
 
 .navbar-menu a {
   text-decoration: none;
   margin: 0 1.5em;
   color: white;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 300;
-cursor: pointer;
+  cursor: pointer;
 }
 
 .socials {
-    display: flex;
-    align-items: center;
-    justify-content: right;
-    flex-direction: row;
-    list-style: none;
-
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .socials li {
-    text-decoration: none;
-    margin: 0 1em;
-    margin-right: 5em;
-    margin-top: 2p;
+  text-decoration: none;
+  margin: 0 1em;
+  margin-right: 5em;
+  margin-top: 2p;
+}
+
+.button {
+  left: 50%;
 }
