--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -8,7 +8,7 @@
 .navbar-menu {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   list-style: none;
   margin: 0;
@@ -37,8 +37,8 @@
 }
 .socials li {
   text-decoration: none;
-  margin: 0 1em;
-  margin-right: 5em;
+  margin: 0 0.1em;
+  margin-right: 3em;
   margin-top: 2p;
 }
 
