--- a/src/components/header.css
+++ b/src/components/header.css
@@ -24,7 +24,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 10em;
+  margin-top: 3em;
 }
 
 .arrow-down img {
@@ -51,5 +51,5 @@
 .arrow-down img:hover {
   transform: translateY(-10px);
   opacity: 10%;
-  animation-play-state: paused;
+  cursor: pointer;
 }
