--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -24,6 +24,11 @@
   font-family: "Lato", sans-serif;
   font-weight: 300;
   cursor: pointer;
+  transition: transform 0.4s ease;
+}
+
+.navbar-menu a:hover{
+    transform: translateY(-10px);
 }
 
 .socials {
