--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-html, body {
+html {
   background: linear-gradient(to bottom, #1A1826, #323859);
-  height: 100%;
+  height: 200%;
   margin: 0 0;
 }
